--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,36 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    build: 
+      context: .
+      args:
+        - DOCKER_BUILDKIT=1
     ports:
       - "8109:5000"
     volumes:
-      - ./static:/app/static
+      - .:/app
+    environment:
+      - FLASK_ENV=production
     env_file:
       - .env
-    restart: unless-stopped
+    restart: always
+    networks:
+      - app-network
+    dns:
+      - 8.8.8.8
+      - 114.114.114.114
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/"]
       interval: 30s
       timeout: 10s
-      retries: 3 
+      retries: 3
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+
+networks:
+  app-network:
+    driver: bridge 
